--- a/css/styles.css
+++ b/css/styles.css
@@ -3489,6 +3489,14 @@ a:visited {
   background-image: url("../assets/img/han.jpg");
 }
 
+#ben-shapiro-cover {
+  background-image: url("../assets/img/ben-shapiro-cover.jpg")
+}
+
+#ben-shapiro-card {
+  background-image: url("../assets/img/ben-shapiro.jpg")
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
